--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
       <h1>This is my first webpage</h1>
     Hello there, awesome person! 
-  <img src='https://avatars.githubusercontent.com/u/103820529?s=400&v=4'>
+  <img src='https://avatars.githubusercontent.com/u/103820529?v=4'>
   </body>
 
 </html>
