--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       <h1>This is my first webpage</h1>
     Hello there, awesome person! 
   <img src='https://avatars.githubusercontent.com/u/103820529?v=4'>
+  <ol>
+      <li>w3schools.com</li>
+      <li>10fastfingers.com</li>
+      <li>slither.io</li>
+  </ol>
   </body>
 
 </html>
