--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <img src='https://avatars.githubusercontent.com/u/103820529?v=4'>
   <ol>
       <li>w3schools.com</li>
+      <li>This is a link to w3schools<a href="https://www.w3schools.com/">w3schools</a></li>
       <li>10fastfingers.com</li>
+      <li>This is a link to 10fastfinger<a href="https://10fastfingers.com/">10fastfingers</a></li>
       <li>slither.io</li>
+      <li>This is a link to slither<a href="http://slither.io/">Slither</a></li>
   </ol>
   </body>
 
